--- a/privacy.html
+++ b/privacy.html
@@ -142,7 +142,7 @@
         <p>如果您对本政策或个人信息保护有任何问题，您可以将您的书面疑问、意见或建议通过以下地址寄至客服部门：</p>
         <p><strong>名称：</strong>【麦田】</p>
         <p>或您也可以通过以下邮箱与客服部门进行联系：</p>
-        <p><strong>联系邮箱：</strong>【vairsly@foxmail.com】</p>
+        <p><strong>联系邮箱：</strong>【taptap麦田】</p>
         <p>一般情况下，我们将在十五个工作日内回复。如果您对我们的回复不满意，特别是我们的个人信息处理行为损害了您的合法权益，您还可以向网信、电信、公安及工商等监管部门进行投诉或举报，或通过向被告住所地有管辖权的法院提起诉讼来寻求解决方案。</p>
     </div>
 </body>
